--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T8687EZLDC"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-T8687EZLDC');
-    </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNSJ901DLT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NNSJ901DLT');
+</script>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=2.5'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -22,7 +23,7 @@
     <link rel="preload" href="asset/images/process.png" as="image">
     <link rel="preload" href="asset/images/pattern-back.jpeg" as="image">
     <link rel="stylesheet" type="text/css" href="asset/index.css">
-    <title>Business branding solution</title>
+    <title>Branding solution</title>
   </head>
   <body>
     <header>
@@ -70,7 +71,7 @@
       </div>
       <div class="company">
         <img src="asset/images/logo-icon.png" />
-        <p> infiniti solutions </p>
+        <p> TBC solutions </p>
       </div>
     </header>
     
@@ -371,7 +372,7 @@
          <br/>
          <span class="copyright">© 2024</span>
          <br/>
-         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">INFINITI-SOLUTION.COM</a>
+         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">TBC-SOLUTION.COM</a>
          <br/>
          <span class="copyright">All rights reserved.</span>
         </div>
