--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Merienda:wght@300..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 </style>
+    <link rel="icon" href="asset/images/favicon.png" type="image/png">
     <link rel="preload" href="asset/images/logo-icon.png" as="image" type="image/png">
     <link rel="preload" href="asset/images/pattern-back.jpg" as="image" type="image/jpg">
-    <link rel="preload" href="asset/images/tag.jpeg" as="image" type="image/jpeg">
-    <link rel="preload" href="asset/images/website-audit.jpg" as="image" type="image/jpg">
-    <link rel="preload" href="asset/images/keyword-research.jpg" as="image" type="image/jpg">
-    <link rel="preload" href="asset/images/page-optimization.jpg" as="image" type="image/jpg">
-    <link rel="preload" href="asset/images/analytics-tracking.jpg" as="image" type="image/jpg">
-    <link rel="preload" href="asset/images/link-building.jpg" as="image" type="image/jpg">
+    <link rel="preload" href="asset/images/tag.png" as="image" type="image/png">
+    <link rel="preload" href="asset/images/budget.jpg" as="image" type="image/jpg">
+    <link rel="preload" href="asset/images/identity.jpg" as="image" type="image/jpg">
+    <link rel="preload" href="asset/images/growth.jpg" as="image" type="image/jpg">
+    <link rel="preload" href="asset/images/trust.jpg" as="image" type="image/jpg">
+    <link rel="preload" href="asset/images/story.jpg" as="image" type="image/jpg">
     <link rel="preload" href="asset/images/blue-process.png" as="image" type="image/png">
     <link rel="preload" href="asset/images/red-process.png" as="image" type="image/png">
     <link rel="stylesheet" type="text/css" href="asset/index.css">
@@ -383,7 +384,7 @@
          <br/>
          <span class="copyright">© 2024</span>
          <br/>
-         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">TBC-SOLUTION.COM</a>
+         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">TBCSOLUTIONS.PRO</a>
          <br/>
          <span class="copyright">All rights reserved.</span>
         </div>
