--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -15,6 +15,8 @@
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
+    <link rel="preload" href="../asset/images/logo-icon.png" as="image" type="image/png">
+    <link rel="preload" href="../asset/images/line-process.png" as="image" type="image/png">
     <link rel="stylesheet" type="text/css" href="../asset/pricing.css">
     <title>Branding pricing</title>
   </head>
@@ -194,7 +196,7 @@
          <br/>
          <span class="copyright">© 2024</span>
          <br/>
-         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">TBC-SOLUTION.COM</a>
+         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">TBCSOLUTIONS.PRO</a>
          <br/>
          <span class="copyright">All rights reserved.</span>
         </div>
