--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -15,8 +15,9 @@
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
-    <link rel="preload" href="../asset/images/logo-icon.png" as="image" type="image/png">
-    <link rel="preload" href="../asset/images/line-process.png" as="image" type="image/png">
+    <link rel="icon" href="../asset/images/favicon.png" type="image/png">    
+    <link rel="preload" href="../asset/images/logo-icon.webp" as="image" type="image/webp">
+    <link rel="preload" href="../asset/images/line-process.webp" as="image" type="image/webp">
     <link rel="stylesheet" type="text/css" href="../asset/pricing.css">
     <title>Branding pricing</title>
   </head>
@@ -69,7 +70,7 @@
         </div>
       </div>
       <div class="company">
-        <img src="../asset/images/logo-icon.png" />
+        <img src="../asset/images/logo-icon.webp" />
         <p> TBC solutions </p>
       </div>
       <h3> Branding Pricing, Tailored to your budget </h3>
@@ -87,7 +88,7 @@
     <main>
       <p class="process">
         <a href="../pages/process.html"> 
-         <img src="../asset/images/line-process.png" />
+         <img src="../asset/images/line-process.webp" />
          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
            <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5" />
            <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z" />
@@ -181,7 +182,7 @@
     <footer>
       <div class="row g-0"> 
        <div class="col"> 
-        <img class="footer-image footer-image-one" src="../asset/images/puzzle.jpg" />
+        <img class="footer-image footer-image-one" src="../asset/images/puzzle.webp" />
        </div>
        <div class="col row g-0 justify-content-center align-items-center">
         <div class="col">
@@ -192,7 +193,7 @@
       <div class="row g-0"> 
        <div class="col row g-0 justify-content-center align-items-center">
         <div class="col">
-         <img class="footer-icon" src="../asset/images/yellow-icon.png" />
+         <img class="footer-icon" src="../asset/images/yellow-icon.webp" />
          <br/>
          <span class="copyright">© 2024</span>
          <br/>
@@ -202,7 +203,7 @@
         </div>
        </div>
        <div class="col"> 
-        <img class="footer-image" src="../asset/images/abstract-icon.png" />
+        <img class="footer-image" src="../asset/images/abstract-icon.webp" />
        </div>
       </div>
     </footer>    
