--- a/pages/process.html
+++ b/pages/process.html
@@ -16,7 +16,8 @@
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
-    <link rel="preload" href="../asset/images/logo-icon.png" as="image" type="image/png">    
+    <link rel="icon" href="../asset/images/favicon.png" type="image/png">    
+    <link rel="preload" href="../asset/images/logo-icon.webp" as="image" type="image/webp">    
     <link rel="stylesheet" type="text/css" href="../asset/process.css">
     <title>Branding process</title>
   </head>
@@ -69,7 +70,7 @@
       </div>
     </div>
     <div class="company">
-      <img src="../asset/images/logo-icon.png" />
+      <img src="../asset/images/logo-icon.webp" />
       <p> TBC solutions </p>
     </div>
     <h3> Our Branding Process Elaborated </h3>
@@ -143,7 +144,7 @@
    <footer>
       <div class="row g-0"> 
        <div class="col"> 
-        <img class="footer-image footer-image-one" src="../asset/images/puzzle.jpg" />
+        <img class="footer-image footer-image-one" src="../asset/images/puzzle.webp" />
        </div>
        <div class="col row g-0 justify-content-center align-items-center">
         <div class="col">
@@ -154,7 +155,7 @@
       <div class="row g-0"> 
        <div class="col row g-0 justify-content-center align-items-center">
         <div class="col">
-         <img class="footer-icon" src="../asset/images/yellow-icon.png" />
+         <img class="footer-icon" src="../asset/images/yellow-icon.webp" />
          <br/>
          <span class="copyright">© 2024</span>
          <br/>
@@ -164,7 +165,7 @@
         </div>
        </div>
        <div class="col"> 
-        <img class="footer-image" src="../asset/images/abstract-icon.png" />
+        <img class="footer-image" src="../asset/images/abstract-icon.webp" />
        </div>
       </div>
    </footer>    
