--- a/pages/process.html
+++ b/pages/process.html
@@ -16,7 +16,7 @@
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
-    <link rel="icon" href="../asset/images/favicon.png" type="image/png">    
+    <link rel="icon" href="../asset/images/favicon.webp" type="image/webp">    
     <link rel="preload" href="../asset/images/logo-icon.webp" as="image" type="image/webp">    
     <link rel="stylesheet" type="text/css" href="../asset/process.css">
     <title>Branding process</title>
