--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="asset/images/favicon.webp" type="image/webp">
     <link rel="preload" href="asset/images/logo-icon.webp" as="image" type="image/webp">
     <link rel="preload" href="asset/images/pattern-back.webp" as="image" type="image/webp">
+    <link rel="preload" href="asset/images/pattern-back-dark.webp" as="image" type="image/webp">
     <link rel="preload" href="asset/images/tag.webp" as="image" type="image/webp">
     <link rel="stylesheet" type="text/css" href="asset/index.css">
     <title>Branding solution</title>
