--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -55,13 +55,13 @@
            </svg>                    
            <span class="link-text"> Our Branding Process </span>
           </a>
-          <a href="https://forms.gle/5PmqGovKf3N2TVWUA">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="grey" class="bi bi-bag-dash-fill" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M6 9.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1z"/>
             </svg>            
             <span class="link-text"> Get started </span>
           </a>
-          <a href="https://sneezyg.github.io/fullstack/" class="last-link">
+          <a href="https://tbcsolutions.pro/" class="last-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="grey" class="bi bi-code-slash" viewBox="0 0 16 16">
               <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0"/>
             </svg>   
@@ -81,7 +81,7 @@
        <span>Get the best deal for your money.</span>
       </div>
       <p class="text-center mt-4"> 
-        <a href="https://forms.gle/5PmqGovKf3N2TVWUA" class="order"> Get started </a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link" class="order"> Get started </a>
       </p>
     </header>
     
@@ -103,7 +103,7 @@
           <h4 class="plan-title"> Basic </h4>
           <p class="mb-0 text-center for-who">"Small businesses or startups seeking to establish a foundational brand identity."</p>
           <div class="action">
-           <a href="https://forms.gle/5PmqGovKf3N2TVWUA"> Share your budget, While we <br/> get started</a>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link"> Share your budget, While we <br/> get started</a>
           </div>      
         </div>
         <ul class="plan-features">
@@ -125,7 +125,7 @@
           <h4 class="plan-title"> Standard </h4>
           <p class="mb-0 text-center for-who">"Growing businesses looking to enhance their brand identity with a more polished presence."</p>
           <div class="action">
-           <a href="https://forms.gle/5PmqGovKf3N2TVWUA"> Share your budget, While we <br/> get started</a>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link"> Share your budget, While we <br/> get started</a>
           </div>          
         </div>
         <ul class="plan-features">
@@ -153,7 +153,7 @@
           <h4 class="plan-title"> Premium </h4>
           <p class="mb-0 text-center for-who">"Established businesses or companies needing a comprehensive brand identity with more advanced features."</p>
           <div class="action">
-           <a href="https://forms.gle/5PmqGovKf3N2TVWUA"> Share your budget, While we <br/> get started</a>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link"> Share your budget, While we <br/> get started</a>
           </div>          
         </div>
         <ul class="plan-features">
@@ -197,7 +197,7 @@
          <br/>
          <span class="copyright">© 2024</span>
          <br/>
-         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">TBCSOLUTIONS.PRO</a>
+         <a class="footer-link" href="https://tbcsolutions.pro/">TBCSOLUTIONS.PRO</a>
          <br/>
          <span class="copyright">All rights reserved.</span>
         </div>
