--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
            </svg>                    
            <span class="link-text"> Our Branding Process </span>
           </a>
-          <a href="https://forms.gle/5PmqGovKf3N2TVWUA">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="grey" class="bi bi-bag-dash-fill" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M6 9.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1z"/>
             </svg>            
             <span class="link-text"> Get started </span>
           </a>
-          <a href="https://sneezyg.github.io/fullstack/" class="last-link">
+          <a href="https://tbcsolutions.pro/" class="last-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="grey" class="bi bi-code-slash" viewBox="0 0 16 16">
               <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0"/>
             </svg>   
@@ -84,7 +84,7 @@
       </h3>
       <div class="action">
        <a href="pages/pricing.html"> See pricing</a>
-       <a href="https://forms.gle/5PmqGovKf3N2TVWUA" class="action-order"> Get started </a>
+       <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link" class="action-order"> Get started </a>
       </div>           
       <div class="tag-line text-center">
        <span>
@@ -111,7 +111,7 @@
            </p>
            <div class="pricing">
             <a href="pages/pricing.html"> See pricing</a>
-            <a href="https://forms.gle/5PmqGovKf3N2TVWUA" class="order"> Get started </a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link" class="order"> Get started </a>
            </div>
           </div>
          </div>
@@ -140,7 +140,7 @@
            </p>
            <div class="pricing">
             <a href="pages/pricing.html"> See pricing</a>
-            <a href="https://forms.gle/5PmqGovKf3N2TVWUA" class="order"> Get started </a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link" class="order"> Get started </a>
            </div>            
           </div>
           <div class="col image-col alt-image">
@@ -175,7 +175,7 @@
            </p>
            <div class="pricing">
             <a href="pages/pricing.html"> See pricing</a>
-            <a href="https://forms.gle/5PmqGovKf3N2TVWUA" class="order"> Get started </a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link" class="order"> Get started </a>
            </div>            
           </div>
          </div>
@@ -204,7 +204,7 @@
             </p>
            <div class="pricing">
             <a href="pages/pricing.html"> See pricing</a>
-            <a href="https://forms.gle/5PmqGovKf3N2TVWUA" class="order"> Get started </a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link" class="order"> Get started </a>
            </div>            
           </div>
           <div class="col image-col alt-image">
@@ -239,7 +239,7 @@
             </p>
            <div class="pricing">
             <a href="pages/pricing.html"> See pricing</a>
-            <a href="https://forms.gle/5PmqGovKf3N2TVWUA" class="order"> Get started </a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc68nu3yhelKR1e1ep-zet5jlMQdbVGQmOhr-hskdRqBCSGdA/viewform?usp=sf_link" class="order"> Get started </a>
            </div>            
           </div>
          </div>
@@ -378,7 +378,7 @@
          <br/>
          <span class="copyright">© 2024</span>
          <br/>
-         <a class="footer-link" href="https://sneezyg.github.io/fullstack/">TBCSOLUTIONS.PRO</a>
+         <a class="footer-link" href="https://tbcsolutions.pro/">TBCSOLUTIONS.PRO</a>
          <br/>
          <span class="copyright">All rights reserved.</span>
         </div>
