--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
     <div class="text-center pattern-back">
       <h3> 
-       <p class="tailored"> Tailored <span class="service">Branding,</span> Building TimeLess Identity </p> <br>
+       <p class="tailored"> Tailored <span class="service">Branding,</span> For TimeLess Identity </p> <br>
        <img class="tag" src="asset/images/tag.webp" />
       </h3>
       <div class="action">
