--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -110,9 +110,11 @@
         <ul class="plan-features">
           <li><span><b>Name:</b> Basic name refinement</span></li>
           <li><span><b>Tone:</b> Simple brand Tone guidelines</span></li>
-          <li><span><b>Core Values:</b> Identify 2-3 key values</span></li>
+          <li><span><b>Core Values:</b> Identify 3 key values</span></li>
+          <li><span><b>Profile Statement:</b> Simple refinement of profile statement</span></li>
           <li><span><b>Logo:</b> Basic logo design</span></li>
-          <li><span><b>Color:</b> 2-3 color palette with guidelines</span></li>
+          <li><span><b>Color:</b> 3 color palette with guidelines</span></li>
+          <li><span><b>Design Motif:</b> basic adaptive design motif</span></li>
           <li><span><b>Tagline:</b> Creation of a simple tagline</span></li>
           <li><span><b>Website:</b> 3-page website</span></li>
           <li><span><b>Domain:</b> 1-year domain registration</span></li>
@@ -133,9 +135,11 @@
           <li><span><b>Name:</b> Name refinement with 3 options<span></li>
           <li><span><b>Tone:</b> Standard voice and tone guidelines</span></li>
           <li><span><b>Core Values:</b> Detailed core values identification</span></li>
+          <li><span><b>Profile Statement:</b> Crafted statement showcasing core values</span></li>
           <li><span><b>Value Propositions:</b> Primary value proposition development</span></li>
           <li><span><b>Logo:</b> Custom logo design</span></li>
           <li><span><b>Color:</b> Expanded palette (4 colors) with guidelines</span></li>
+          <li><span><b>Design Motif:</b> Custom motif tailored for consistency</span></li>
           <li><span><b>Marks:</b> Design of secondary marks/symbols</span></li>
           <li><span><b>Icons:</b> Selection of relevant pre-designed icons</span></li>
           <li><span><b>Typography:</b> Basic typography guidelines</span></li>
@@ -158,12 +162,14 @@
           </div>          
         </div>
         <ul class="plan-features">
-          <li><span><b>Name:</b> Name refinement with 5 options<span></li>
+          <li><span><b>Name:</b> Name refinement with 3 options<span></li>
           <li><span><b>Tone:</b> Comprehensive voice and tone guidelines</span></li>
           <li><span><b>Core Values:</b> Detailed core values identification</span></li>
+          <li><span><b>Profile Statement:</b> Strategic statement that strengthens identity</span></li>
           <li><span><b>Value Propositions:</b> Strategic value proposition development</span></li>
           <li><span><b>Logo:</b> Premium custom logo design</span></li>
           <li><span><b>Color:</b> Advanced palette (6 colors) with detailed usage scenarios</span></li>
+          <li><span><b>Design Motif:</b> Premium motif designed for versatility</span></li>
           <li><span><b>Marks:</b> Design of secondary marks/symbols</span></li>
           <li><span><b>Icons:</b> Custom icon-set design</span></li>
           <li><span><b>Typography:</b> Advanced typography guidelines </span></li>
