--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -111,11 +111,12 @@
           <li><span><b>Name:</b> Basic name refinement</span></li>
           <li><span><b>Tone:</b> Simple brand Tone guidelines</span></li>
           <li><span><b>Core Values:</b> Identify 3 key values</span></li>
-          <li><span><b>Profile Statement:</b> Simple refinement of profile statement</span></li>
+          <li><span><b>Profile Statement:</b> Simple refined profile statement</span></li>
           <li><span><b>Logo:</b> Basic logo design</span></li>
           <li><span><b>Color:</b> 3 color palette with guidelines</span></li>
-          <li><span><b>Design Motif:</b> basic adaptive design motif</span></li>
-          <li><span><b>Tagline:</b> Creation of a simple tagline</span></li>
+          <li><span><b>Design Motif:</b> Basic adaptive design motif</span></li>
+          <li><span><b>Label Design:</b> Simple professional label</span></li>
+          <li><span><b>Tagline:</b> Simple refined tagline</span></li>
           <li><span><b>Website:</b> 3-page website</span></li>
           <li><span><b>Domain:</b> 1-year domain registration</span></li>
           <li><span><b>Hosting:</b> 3 months of web hosting</span></li>
@@ -140,10 +141,11 @@
           <li><span><b>Logo:</b> Custom logo design</span></li>
           <li><span><b>Color:</b> Expanded palette (4 colors) with guidelines</span></li>
           <li><span><b>Design Motif:</b> Custom motif tailored for consistency</span></li>
-          <li><span><b>Marks:</b> Design of secondary marks/symbols</span></li>
+          <li><span><b>Label Design:</b> Custom Eye-catching label.</span></li>
+          <li><span><b>Marks:</b> Design of secondary marks</span></li>
           <li><span><b>Icons:</b> Selection of relevant pre-designed icons</span></li>
           <li><span><b>Typography:</b> Basic typography guidelines</span></li>
-          <li><span><b>Mission:</b> Mission statement refinement</span></li>
+          <li><span><b>Mission:</b> Refined mission statement</span></li>
           <li><span><b>Story:</b> Brief brand story development</span></li>
           <li><span><b>Tagline:</b> Enhanced tagline focused on messaging</span></li>
           <li><span><b>Website:</b> 5-page website</span></li>
@@ -170,6 +172,7 @@
           <li><span><b>Logo:</b> Premium custom logo design</span></li>
           <li><span><b>Color:</b> Advanced palette (6 colors) with detailed usage scenarios</span></li>
           <li><span><b>Design Motif:</b> Premium motif designed for versatility</span></li>
+          <li><span><b>Label Design:</b> Luxury and bespoke label </span></li>
           <li><span><b>Marks:</b> Design of secondary marks/symbols</span></li>
           <li><span><b>Icons:</b> Custom icon-set design</span></li>
           <li><span><b>Typography:</b> Advanced typography guidelines </span></li>
