--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <title>Branding solution</title>
   </head>
   <body>
+    <div class="header-cont">    
     <header>
       <div class="menu">
         <div class=menu-btn>
@@ -102,6 +103,7 @@
          </span>
        </span>
       </div>
+    </div>
     </div>
     
     <main>
