--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -80,7 +80,7 @@
       </div>
       <h3> Branding Pricing, Tailored to your budget </h3>
       <div class="tag-line text-center">
-       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#c2fc7e" class="bi bi-bag-check-fill" viewBox="0 0 16 16">
+       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" class="bi bi-bag-check-fill" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0m-.646 5.354a.5.5 0 0 0-.708-.708L7.5 10.793 6.354 9.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0z"/>
        </svg>
        <span>Get the best deal for your money.</span>
@@ -112,6 +112,7 @@
           </div>      
         </div>
         <ul class="plan-features">
+          <li><span><b>Experience Guide:</b> Basic name refinement</span></li>
           <li><span><b>Name:</b> Basic name refinement</span></li>
           <li><span><b>Tone:</b> Simple brand Tone guidelines</span></li>
           <li><span><b>Core Values:</b> Identify 3 key values</span></li>
