--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -112,7 +112,7 @@
           </div>      
         </div>
         <ul class="plan-features">
-          <li><span><b>Experience Guide:</b> Basic name refinement</span></li>
+          <li><span><b>Customer Experience Playbook</b></span></li>
           <li><span><b>Name:</b> Basic name refinement</span></li>
           <li><span><b>Tone:</b> Simple brand Tone guidelines</span></li>
           <li><span><b>Core Values:</b> Identify 3 key values</span></li>
@@ -138,6 +138,7 @@
           </div>          
         </div>
         <ul class="plan-features">
+          <li><span><b>Customer Experience Playbook</b></span></li>          
           <li><span><b>Name:</b> Name refinement with 3 options<span></li>
           <li><span><b>Tone:</b> Standard voice and tone guidelines</span></li>
           <li><span><b>Core Values:</b> Detailed core values identification</span></li>
@@ -169,6 +170,7 @@
           </div>          
         </div>
         <ul class="plan-features">
+          <li><span><b>Customer Experience Playbook</b></span></li>          
           <li><span><b>Name:</b> Name refinement with 3 options<span></li>
           <li><span><b>Tone:</b> Comprehensive voice and tone guidelines</span></li>
           <li><span><b>Core Values:</b> Detailed core values identification</span></li>
