--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -112,16 +112,16 @@
           </div>      
         </div>
         <ul class="plan-features">
-          <li><span><b>Customer Experience Playbook</b></span></li>
-          <li><span><b>Name:</b> Basic name refinement</span></li>
-          <li><span><b>Tone:</b> Simple brand Tone guidelines</span></li>
-          <li><span><b>Core Values:</b> Identify 3 key values</span></li>
-          <li><span><b>Profile Statement:</b> Simple refined profile statement</span></li>
-          <li><span><b>Logo:</b> Basic logo design</span></li>
-          <li><span><b>Color:</b> 3 color palette with guidelines</span></li>
-          <li><span><b>Design Motif:</b> Basic adaptive design motif</span></li>
-          <li><span><b>Label Design:</b> Simple professional label</span></li>
-          <li><span><b>Tagline:</b> Simple refined tagline</span></li>
+          <li><span><b>Brand Report:</b> A summary of your brand's current position in the market</span></li>
+          <li><span><b>Business Report:</b> Overview of your business model and competitor analysis</span></li>
+          <li><span><b>Brand Strategy:</b> High-level strategy outlining your brand’s core objectives</span></li>          
+          <li><span><b>Mood Board:</b> A simple collection of inspiration and visual direction</span></li>
+          <li><span><b>Brand Identity:</b> Logo, Tone, Colour, Typography </span></li>
+          <li><span><b>Brand Messaging:</b> Basic messaging that communicates your brand’s value</span></li>
+          <li><span><b>Brand Guidelines:</b> Simple guidelines for consistent brand use</span></li>
+          <li><span><b>Brand Board:</b> A basic visual representation of your brand elements</span></li>
+          <li><span><b>Customer Experience Playbook</b></span></li>          
+          <li><span><b>Brand Launch:</b> Provide support in introducing your brand to the market</span></li>
           <li><span><b>Website:</b> 3-page website</span></li>
           <li><span><b>Domain:</b> 1-year domain registration</span></li>
           <li><span><b>Hosting:</b> 3 months of web hosting</span></li>
@@ -138,22 +138,16 @@
           </div>          
         </div>
         <ul class="plan-features">
+          <li><span><b>Brand Report:</b> Detailed analysis of your brand's market position with actionable insights</span></li>
+          <li><span><b>Business Report:</b> In-depth review of the business model and competitor strategies</span></li>
+          <li><span><b>Brand Strategy:</b> A refined strategy tailored to achieve specific goals and growth.</span></li>
+          <li><span><b>Mood Board:</b> Curated selection of visuals that reflect your brand's personality</span></li>
+          <li><span><b>Brand Identity:</b> Logo, Tone, Colour, Typography, Icons </span></li>
+          <li><span><b>Brand Messaging:</b> Crafting of core brand messages and key differentiators</span></li>
+          <li><span><b>Brand Guidelines:</b> Comprehensive document covering visual and messaging consistency</span></li>
+          <li><span><b>Brand Board:</b> A more detailed brand board showcasing your visual identity and brand direction</span></li>
           <li><span><b>Customer Experience Playbook</b></span></li>          
-          <li><span><b>Name:</b> Name refinement with 3 options<span></li>
-          <li><span><b>Tone:</b> Standard voice and tone guidelines</span></li>
-          <li><span><b>Core Values:</b> Detailed core values identification</span></li>
-          <li><span><b>Profile Statement:</b> Crafted statement showcasing core values</span></li>
-          <li><span><b>Value Propositions:</b> Primary value proposition development</span></li>
-          <li><span><b>Logo:</b> Custom logo design</span></li>
-          <li><span><b>Color:</b> Expanded palette (4 colors) with guidelines</span></li>
-          <li><span><b>Design Motif:</b> Custom motif tailored for consistency</span></li>
-          <li><span><b>Label Design:</b> Custom Eye-catching label.</span></li>
-          <li><span><b>Marks:</b> Design of secondary marks</span></li>
-          <li><span><b>Icons:</b> Selection of relevant pre-designed icons</span></li>
-          <li><span><b>Typography:</b> Basic typography guidelines</span></li>
-          <li><span><b>Mission:</b> Refined mission statement</span></li>
-          <li><span><b>Story:</b> Brief brand story development</span></li>
-          <li><span><b>Tagline:</b> Enhanced tagline focused on messaging</span></li>
+          <li><span><b>Brand Launch:</b> Provide support in launching your brand with effective strategies</span></li>
           <li><span><b>Website:</b> 5-page website</span></li>
           <li><span><b>Domain:</b> 1-year domain registration</span></li>
           <li><span><b>Hosting:</b> 6 months of web hosting</span></li>
@@ -170,22 +164,16 @@
           </div>          
         </div>
         <ul class="plan-features">
+          <li><span><b>Brand Report:</b> Full-scale brand audit, identifying strengths, weaknesses, and opportunities</span></li>
+          <li><span><b>Business Report:</b> Comprehensive review of business model, competitor analysis, and business opportunities</span></li>
+          <li><span><b>Brand Strategy:</b> A fully developed, strategic roadmap with long-term goals and tactics</span></li>
+          <li><span><b>Mood Board:</b> Expertly crafted mood boards, reflecting every nuance of your brand’s essence</span></li>
+          <li><span><b>Brand Identity:</b> Logo, Tone, Colour, Typography, Icons, Motif </span></li>
+          <li><span><b>Brand Messaging:</b> Tailored messaging for multiple platforms, ensuring cohesive communication across all channels</span></li>
+          <li><span><b>Brand Guidelines:</b> A detailed, brand bible that covers all design, tone, and usage rules</span></li>
+          <li><span><b>Brand Board:</b> High-end, visually stunning presentation of your brand’s key assets and direction</span></li>
           <li><span><b>Customer Experience Playbook</b></span></li>          
-          <li><span><b>Name:</b> Name refinement with 3 options<span></li>
-          <li><span><b>Tone:</b> Comprehensive voice and tone guidelines</span></li>
-          <li><span><b>Core Values:</b> Detailed core values identification</span></li>
-          <li><span><b>Profile Statement:</b> Strategic statement that strengthens identity</span></li>
-          <li><span><b>Value Propositions:</b> Strategic value proposition development</span></li>
-          <li><span><b>Logo:</b> Premium custom logo design</span></li>
-          <li><span><b>Color:</b> Advanced palette (6 colors) with detailed usage scenarios</span></li>
-          <li><span><b>Design Motif:</b> Premium motif designed for versatility</span></li>
-          <li><span><b>Label Design:</b> Luxury and bespoke label </span></li>
-          <li><span><b>Marks:</b> Design of secondary marks/symbols</span></li>
-          <li><span><b>Icons:</b> Custom icon-set design</span></li>
-          <li><span><b>Typography:</b> Advanced typography guidelines </span></li>
-          <li><span><b>Mission:</b> Comprehensive mission statement refinement</span></li>
-          <li><span><b>Story:</b> In-depth brand story development</span></li>
-          <li><span><b>Tagline:</b> Multiple taglines for various purposes</span></li>
+          <li><span><b>Brand Launch:</b> Launch strategy, media planning, and full implementation support</span></li>
           <li><span><b>Website:</b> 7-page website</span></li>
           <li><span><b>Domain:</b> 1-year domain registration</span></li>
           <li><span><b>Hosting:</b> 12 months of web hosting</span></li>
